CV Complete design rework

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Portfolio et CV de Marc Götze, développeur web JavaScript React.js"
     />
     <title>Marc Götze - Développeur web</title>
   </head>
